refactored header, improved search-form

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,10 +1,10 @@
 {
     "Patvirtinta": "Approved",
     "Peržiūrėta": "Reviewed",
-    "Krepšinis": "Basketball",
-    "Futbolas": "Football",
-    "Tinklinis": "Volleyball",
-    "Lauko treniruokliai": "Outside sport facilities",
+    "krepšinis": "basketball",
+    "futbolas": "football",
+    "tinklinis": "volleyball",
+    "lauko treniruokliai": "outside sport facilities",
     "Vartotojas": "User",
     "Moderatorius" : "Moderator",
     "Administratorius": "Admin",
