--- a/assets/i18n/lt.json
+++ b/assets/i18n/lt.json
@@ -1,4 +1,8 @@
 {
+    "basketball": "krepšinis",
+    "football": "futbolas",
+    "volleyball": "tinklinis",
+    "outside sport facilities": "lauko treniruokliai",
     "NAVIGATION": {
         "SEARCH": "Paieška",
         "TOP10": "TOP10",
