--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -156,6 +156,8 @@
     },
     "OTHER": {
         "ERROR": "Klaida!",
+        "NOTE": "Patarimas!",
+        "ENABLE_LOCATION": "Įjungę vietovės bendrinimą pagerinsite paieškos tikslumą bei kitas funkcijas.",
         "OR": "Arba",
         "UPDATE": "Atnaujinti",
         "CHANGE_PASSWORD": "Pakeisti slaptažodį"
