--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -11,6 +11,7 @@
     "karting": "kartingai",
     "venue": "pramogų vieta",
     "water park": "vandens parkas",
+    "skiing": "slidinėjimas",
 
     "APPROVED": "Patvirtinta",
     "REJECTED": "Atmesta",
