--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -11,6 +11,7 @@
     "kartingai": "karting",
     "pramogų vieta": "venue",
     "vandens parkas": "water park",
+    "slidinėjimas": "skiing",
 
     "APPROVED": "Approved",
     "REJECTED": "Rejected",
