--- a/assets/i18n/lt.json
+++ b/assets/i18n/lt.json
@@ -79,8 +79,10 @@
         "NO_SPOTS_SPOTTED": "Dar nepažymėjai jokios vietos"
     },
     "REVIEW": {
-        "UNREVIEWED_SPOTS": "Neperžiūrėtos vietos",
-        "NO_UNREVIEWED_SPOTS": "Šiuo metu neperžiūrėtų vietų nėra"
+      "UNREVIEWED_SPOTS": "Neperžiūrėtos vietos",
+      "NO_UNREVIEWED_SPOTS": "Šiuo metu neperžiūrėtų vietų nėra",
+      "FLAGGED_COMMENTS": "Pažymėti komentarai",
+      "NO_FLAGGED_COMMENTS": "Šiuo metu pažymėtų komentarų nėra"
     },
     "SPOTTERS_JOIN": {
         "JOIN": "Prisijunk",
@@ -112,6 +114,9 @@
         "NO_DESCRIPTION": "Deja! Ši vieta neturi aprašymo.",
         "GALLERY": "Galerija",
         "NO_IMAGES": "Deja! Ši vieta neturi nuotraukos.",
+        "NO_COMMENTS": "Ši vieta dar neturi komentarų. Buvai čia? Pasidalink savo nuomone!",
+        "COMMENTS": "Komentarai",
+        "WRITE_COMMENT": "Komentuoti",
         "TITLE": "Pavadinimas",
         "CITY": "Miestas",
         "LOCATION": "Vieta",
@@ -119,6 +124,14 @@
         "CREATED": "Sukurta",
         "STATUS": "Statusas",
         "SPOTTER": "Narys"
+    },
+    "COMMENT": {
+      "CONTENT": "Turinys",
+      "USER": "Vartotojas",
+      "FLAGGED": "Pažymėta",
+      "REPLIES": "Atsakymų",
+      "UNFLAG": "Atžymėti",
+      "REMOVE": "Pašalinti"
     },
     "SPOT_FORM": {
         "DESCRIPTION": "Aprašymas",
@@ -130,12 +143,16 @@
         "DESCRIPTION_PLACEHOLDER": "Įvesk vietos aprašymą",
         "LATITUDE": "Platuma",
         "LONGITUDE": "Ilguma",
+        "COMMENT": "Įvesk komentarą",
         "USE_CURRENT_LOCATION": "Naudoti dabartinę vietą",
         "SUCCESSFUL_SUBMISSION": "Tavo užklausa sėkmingai išsiųsta!",
+        "SUCCESSFUL_COMMENT_SUBMISSION": "Tavo užklausa sėkmingai išsiustą!",
         "SHOW_UPDATES": "Pakeitimus gali peržiūrėti čia",
+        "SHOW_COMMENT": "Pakeitimus gali peržiūrėti čia",
         "SUCCESSFULLY_ADDED": "Sėkmingai pažymėjai naują vietą. Dėkojame!",
         "SUCESSFULLY_ADDED_TO_QUEUE": "Tavo užklausa dėl naujos vietos pažymėjimo sėkmingai nusiųsta mūsų moderatoriams. Dėkojame!",
-        "PROCESSING": "Jūsų pažymėta vieta įkeliama. Įkėlimas neturėtų užtrukti ilgiau nei 1 min. Dėkojame"
+        "PROCESSING": "Jūsų pažymėta vieta įkeliama. Įkėlimas neturėtų užtrukti ilgiau nei 1 min. Dėkojame",
+        "PROCESSING_COMMENT": "Jūsų komentaras įkeliamas. Įkėlimas neturėtų užtrukti ilgiau nei 1 min. Dėkojame"
     },
     "USERS": {
         "ALL_USERS": "Visi vartotojai",
@@ -182,6 +199,8 @@
         "OR": "Arba",
         "UPDATE": "Atnaujinti",
         "CHANGE_PASSWORD": "Pakeisti slaptažodį",
-        "SUBMIT": "Siųsti"
+        "SUBMIT": "Siųsti",
+        "NEXT": "Kitas",
+        "PREVIOUS": "Ankstesnis"
     }
 }
